--- a/ufo/HighlandSans-Bold.ufo/fontinfo.plist
+++ b/ufo/HighlandSans-Bold.ufo/fontinfo.plist
@@ -27,11 +27,11 @@
 	<key>openTypeNamePreferredFamilyName</key>
 	<string>Highland Sans</string>
 	<key>openTypeNamePreferredSubfamilyName</key>
-	<string>Light</string>
+	<string>Bold</string>
 	<key>openTypeOS2VendorID</key>
 	<string>QUQA</string>
 	<key>openTypeOS2WeightClass</key>
-	<integer>300</integer>
+	<integer>700</integer>
 	<key>openTypeOS2WidthClass</key>
 	<integer>5</integer>
 	<key>postscriptBlueValues</key>
