--- a/ufo/HighlandSans-Bold.ufo/lib.plist
+++ b/ufo/HighlandSans-Bold.ufo/lib.plist
@@ -333,6 +333,7 @@
 		<string>emdash</string>
 		<string>endash</string>
 		<string>hyphen</string>
+		<string>uni2011</string>
 		<string>hyphen.alt</string>
 		<string>emdash.alt1</string>
 		<string>emdash.alt2</string>
