--- a/ufo/HighlandSans.ufo/glyphs/contents.plist
+++ b/ufo/HighlandSans.ufo/glyphs/contents.plist
@@ -732,6 +732,8 @@
 	<string>uni021B_.glif</string>
 	<key>uni0326</key>
 	<string>uni0326.glif</string>
+	<key>uni2011</key>
+	<string>uni2011.glif</string>
 	<key>uogonek</key>
 	<string>uogonek.glif</string>
 	<key>uring</key>
