--- a/ufo/HighlandSans.ufo/lib.plist
+++ b/ufo/HighlandSans.ufo/lib.plist
@@ -331,6 +331,7 @@
 		<string>emdash</string>
 		<string>endash</string>
 		<string>hyphen</string>
+		<string>uni2011</string>
 		<string>hyphen.alt</string>
 		<string>emdash.alt1</string>
 		<string>emdash.alt2</string>
