--- a/ufo/HighlandSans-BoldItalic.ufo/fontinfo.plist
+++ b/ufo/HighlandSans-BoldItalic.ufo/fontinfo.plist
@@ -29,7 +29,7 @@
 	<key>openTypeNamePreferredFamilyName</key>
 	<string>Highland Sans Italic</string>
 	<key>openTypeNamePreferredSubfamilyName</key>
-	<string>Light</string>
+	<string>Bold</string>
 	<key>openTypeOS2VendorID</key>
 	<string>QUQA</string>
 	<key>openTypeOS2WeightClass</key>
@@ -38,9 +38,19 @@
 	<integer>5</integer>
 	<key>postscriptBlueValues</key>
 	<array>
+		<integer>-22</integer>
+		<integer>0</integer>
+		<integer>924</integer>
+		<integer>946</integer>
+		<integer>1187</integer>
+		<integer>1209</integer>
+		<integer>1312</integer>
+		<integer>1334</integer>
 	</array>
 	<key>postscriptOtherBlues</key>
 	<array>
+		<integer>-415</integer>
+		<integer>-393</integer>
 	</array>
 	<key>styleMapStyleName</key>
 	<string>regular</string>
