--- a/ufo/HighlandSans-Italic.ufo/fontinfo.plist
+++ b/ufo/HighlandSans-Italic.ufo/fontinfo.plist
@@ -38,9 +38,19 @@
 	<integer>5</integer>
 	<key>postscriptBlueValues</key>
 	<array>
+		<integer>-22</integer>
+		<integer>0</integer>
+		<integer>924</integer>
+		<integer>946</integer>
+		<integer>1187</integer>
+		<integer>1209</integer>
+		<integer>1312</integer>
+		<integer>1334</integer>
 	</array>
 	<key>postscriptOtherBlues</key>
 	<array>
+		<integer>-410</integer>
+		<integer>-388</integer>
 	</array>
 	<key>styleMapStyleName</key>
 	<string>regular</string>
