Fix italic family name and bold style flag

--- a/ufo/HighlandSans-BoldItalic.ufo/fontinfo.plist
+++ b/ufo/HighlandSans-BoldItalic.ufo/fontinfo.plist
@@ -27,7 +27,7 @@
 	<key>openTypeNameManufacturerURL</key>
 	<string>http://quoteunquoteapps.com</string>
 	<key>openTypeNamePreferredFamilyName</key>
-	<string>Highland Sans Italic</string>
+	<string>Highland Sans</string>
 	<key>openTypeNamePreferredSubfamilyName</key>
 	<string>Bold</string>
 	<key>openTypeOS2VendorID</key>
