Update Greek and math symbols
- Add bold currency symbol
- Fix length of mu descender
- Make product narrower

--- a/ufo/HighlandSans.ufo/lib.plist
+++ b/ufo/HighlandSans.ufo/lib.plist
@@ -6,7 +6,9 @@
 	<dict>
 		<key>222D0B97-E2BD-4249-A584-FAB7D66A0D71</key>
 		<dict>
-	</dict>
+			<key>HV</key>
+			<string>72</string>
+		</dict>
 		<key>UUID0</key>
 		<dict>
 	</dict>
