Update dcroat with proportions from hbar
- Lower x-height
- Lower bar position
- Narrower

--- a/ufo/HighlandSans.ufo/lib.plist
+++ b/ufo/HighlandSans.ufo/lib.plist
@@ -7,7 +7,7 @@
 		<key>222D0B97-E2BD-4249-A584-FAB7D66A0D71</key>
 		<dict>
 			<key>HV</key>
-			<string>72</string>
+			<integer>72</integer>
 		</dict>
 		<key>UUID0</key>
 		<dict>
