--- a/ufo/HighlandSans-BoldItalic.ufo/lib.plist
+++ b/ufo/HighlandSans-BoldItalic.ufo/lib.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>GSDimensionPlugin.Dimensions</key>
+	<dict>
+		<key>0791FDB8-5A5D-41D7-9039-1C27D6F382A7</key>
+		<dict>
+	</dict>
+		<key>UUID0</key>
+		<dict>
+	</dict>
+	</dict>
 	<key>com.schriftgestaltung.fontMasterID</key>
 	<string>0791FDB8-5A5D-41D7-9039-1C27D6F382A7</string>
 	<key>com.schriftgestaltung.useNiceNames</key>
