--- a/ufo/HighlandSans-Italic.ufo/glyphs/contents.plist
+++ b/ufo/HighlandSans-Italic.ufo/glyphs/contents.plist
@@ -266,6 +266,8 @@
 	<string>acircumflex.glif</string>
 	<key>acute</key>
 	<string>acute.glif</string>
+	<key>acute.case</key>
+	<string>acute.case.glif</string>
 	<key>adieresis</key>
 	<string>adieresis.glif</string>
 	<key>ae</key>
@@ -308,6 +310,8 @@
 	<string>bracketright.glif</string>
 	<key>breve</key>
 	<string>breve.glif</string>
+	<key>breve.case</key>
+	<string>breve.case.glif</string>
 	<key>brokenbar</key>
 	<string>brokenbar.glif</string>
 	<key>bullet</key>
@@ -318,6 +322,8 @@
 	<string>cacute.glif</string>
 	<key>caron</key>
 	<string>caron.glif</string>
+	<key>caron.case</key>
+	<string>caron.case.glif</string>
 	<key>ccaron</key>
 	<string>ccaron.glif</string>
 	<key>ccedilla</key>
@@ -328,10 +334,14 @@
 	<string>cdotaccent.glif</string>
 	<key>cedilla</key>
 	<string>cedilla.glif</string>
+	<key>cedilla.case</key>
+	<string>cedilla.case.glif</string>
 	<key>cent</key>
 	<string>cent.glif</string>
 	<key>circumflex</key>
 	<string>circumflex.glif</string>
+	<key>circumflex.case</key>
+	<string>circumflex.case.glif</string>
 	<key>colon</key>
 	<string>colon.glif</string>
 	<key>colon.alt</key>
@@ -358,12 +368,16 @@
 	<string>degree.glif</string>
 	<key>dieresis</key>
 	<string>dieresis.glif</string>
+	<key>dieresis.case</key>
+	<string>dieresis.case.glif</string>
 	<key>divide</key>
 	<string>divide.glif</string>
 	<key>dollar</key>
 	<string>dollar.glif</string>
 	<key>dotaccent</key>
 	<string>dotaccent.glif</string>
+	<key>dotaccent.case</key>
+	<string>dotaccent.case.glif</string>
 	<key>dotlessi</key>
 	<string>dotlessi.glif</string>
 	<key>dotlessj</key>
@@ -456,6 +470,8 @@
 	<string>germandbls.glif</string>
 	<key>grave</key>
 	<string>grave.glif</string>
+	<key>grave.case</key>
+	<string>grave.case.glif</string>
 	<key>greater</key>
 	<string>greater.glif</string>
 	<key>greaterequal</key>
@@ -476,6 +492,8 @@
 	<string>hcircumflex.glif</string>
 	<key>hungarumlaut</key>
 	<string>hungarumlaut.glif</string>
+	<key>hungarumlaut.case</key>
+	<string>hungarumlaut.case.glif</string>
 	<key>hyphen</key>
 	<string>hyphen.glif</string>
 	<key>hyphen.alt</key>
@@ -536,6 +554,8 @@
 	<string>m.glif</string>
 	<key>macron</key>
 	<string>macron.glif</string>
+	<key>macron.case</key>
+	<string>macron.case.glif</string>
 	<key>minus</key>
 	<string>minus.glif</string>
 	<key>minute</key>
@@ -574,6 +594,8 @@
 	<string>oe.glif</string>
 	<key>ogonek</key>
 	<string>ogonek.glif</string>
+	<key>ogonek.case</key>
+	<string>ogonek.case.glif</string>
 	<key>ograve</key>
 	<string>ograve.glif</string>
 	<key>ohungarumlaut</key>
@@ -662,6 +684,8 @@
 	<string>registered.glif</string>
 	<key>ring</key>
 	<string>ring.glif</string>
+	<key>ring.case</key>
+	<string>ring.case.glif</string>
 	<key>s</key>
 	<string>s.glif</string>
 	<key>sacute</key>
@@ -712,6 +736,8 @@
 	<string>threesuperior.glif</string>
 	<key>tilde</key>
 	<string>tilde.glif</string>
+	<key>tilde.case</key>
+	<string>tilde.case.glif</string>
 	<key>trademark</key>
 	<string>trademark.glif</string>
 	<key>two</key>
@@ -744,6 +770,8 @@
 	<string>uni021B_.glif</string>
 	<key>uni0326</key>
 	<string>uni0326.glif</string>
+	<key>uni0326.case</key>
+	<string>uni0326.case.glif</string>
 	<key>uni2011</key>
 	<string>uni2011.glif</string>
 	<key>uogonek</key>
