--- a/ufo/HighlandSans-Italic.ufo/lib.plist
+++ b/ufo/HighlandSans-Italic.ufo/lib.plist
@@ -9,7 +9,9 @@
 	</dict>
 		<key>UUID0</key>
 		<dict>
-	</dict>
+			<key>HV</key>
+			<integer>72</integer>
+		</dict>
 	</dict>
 	<key>com.schriftgestaltung.fontMasterID</key>
 	<string>UUID0</string>
@@ -399,6 +401,7 @@
 		<string>second</string>
 		<string>section</string>
 		<string>trademark</string>
+		<string>bar.double</string>
 		<string>acute</string>
 		<string>breve</string>
 		<string>caron</string>
