--- a/ufo/HighlandSans-Bold.ufo/lib.plist
+++ b/ufo/HighlandSans-Bold.ufo/lib.plist
@@ -408,6 +408,7 @@
 		<string>grave.alt</string>
 		<string>breve</string>
 		<string>caron</string>
+		<string>caron.alt</string>
 		<string>acute.case</string>
 		<string>breve.case</string>
 		<string>caron.case</string>
