Update source files after Glyphs 1.4.4 update

--- a/ufo/HighlandSans-Bold.ufo/fontinfo.plist
+++ b/ufo/HighlandSans-Bold.ufo/fontinfo.plist
@@ -10,6 +10,8 @@
 	<string>Copyright (c) 2014 Quote-Unquote Apps.</string>
 	<key>descender</key>
 	<integer>-643</integer>
+	<key>familyName</key>
+	<string>Highland Sans</string>
 	<key>openTypeHeadCreated</key>
 	<string>2014/11/13 22:00:05</string>
 	<key>openTypeNameDesigner</key>
