Add placeholder alternate a for legibility test

--- a/ufo/HighlandSans-BoldItalic.ufo/lib.plist
+++ b/ufo/HighlandSans-BoldItalic.ufo/lib.plist
@@ -149,6 +149,7 @@
 		<string>Zcaron</string>
 		<string>Zdotaccent</string>
 		<string>a</string>
+		<string>a.alt</string>
 		<string>aacute</string>
 		<string>abreve</string>
 		<string>acircumflex</string>
