--- a/ufo/HighlandSans-Italic.ufo/lib.plist
+++ b/ufo/HighlandSans-Italic.ufo/lib.plist
@@ -147,6 +147,7 @@
 		<string>Zcaron</string>
 		<string>Zdotaccent</string>
 		<string>a</string>
+		<string>a.alt</string>
 		<string>aacute</string>
 		<string>abreve</string>
 		<string>acircumflex</string>
