--- a/ufo/HighlandSans-Italic.ufo/lib.plist
+++ b/ufo/HighlandSans-Italic.ufo/lib.plist
@@ -166,6 +166,7 @@
 		<string>ccircumflex</string>
 		<string>cdotaccent</string>
 		<string>d</string>
+		<string>d.alt</string>
 		<string>eth</string>
 		<string>dcaron</string>
 		<string>dcroat</string>
