Adjust sidebearings and tails of italic a and d

--- a/ufo/HighlandSans-BoldItalic.ufo/lib.plist
+++ b/ufo/HighlandSans-BoldItalic.ufo/lib.plist
@@ -157,6 +157,7 @@
 		<string>agrave</string>
 		<string>amacron</string>
 		<string>aogonek</string>
+		<string>aogonek.alt</string>
 		<string>aring</string>
 		<string>atilde</string>
 		<string>ae</string>
