--- a/ufo/HighlandSans-Italic.ufo/glyphs/contents.plist
+++ b/ufo/HighlandSans-Italic.ufo/glyphs/contents.plist
@@ -282,6 +282,8 @@
 	<string>ampersand.glif</string>
 	<key>aogonek</key>
 	<string>aogonek.glif</string>
+	<key>aogonek.alt</key>
+	<string>aogonek.alt.glif</string>
 	<key>approxequal</key>
 	<string>approxequal.glif</string>
 	<key>aring</key>
