--- a/ufo/HighlandSans-Italic.ufo/lib.plist
+++ b/ufo/HighlandSans-Italic.ufo/lib.plist
@@ -155,6 +155,7 @@
 		<string>agrave</string>
 		<string>amacron</string>
 		<string>aogonek</string>
+		<string>aogonek.alt</string>
 		<string>aring</string>
 		<string>atilde</string>
 		<string>ae</string>
