--- a/ufo/HighlandSans-Bold.ufo/fontinfo.plist
+++ b/ufo/HighlandSans-Bold.ufo/fontinfo.plist
@@ -13,7 +13,7 @@
 	<key>familyName</key>
 	<string>Highland Sans</string>
 	<key>openTypeHeadCreated</key>
-	<string>2015/01/05 22:48:22</string>
+	<string>2015/01/05 23:17:24</string>
 	<key>openTypeNameDesigner</key>
 	<string>Alan Dague-Greene</string>
 	<key>openTypeNameDesignerURL</key>
@@ -131,11 +131,11 @@ OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM OTHER DEALINGS IN T
 	<key>openTypeNamePreferredFamilyName</key>
 	<string>Highland Sans</string>
 	<key>openTypeNamePreferredSubfamilyName</key>
-	<string>Light</string>
+	<string>Bold</string>
 	<key>openTypeOS2VendorID</key>
 	<string>QUQA</string>
 	<key>openTypeOS2WeightClass</key>
-	<integer>300</integer>
+	<integer>700</integer>
 	<key>openTypeOS2WidthClass</key>
 	<integer>5</integer>
 	<key>postscriptBlueValues</key>
@@ -174,7 +174,7 @@ OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM OTHER DEALINGS IN T
 	<key>versionMajor</key>
 	<integer>3</integer>
 	<key>versionMinor</key>
-	<integer>6</integer>
+	<integer>7</integer>
 	<key>xHeight</key>
 	<integer>924</integer>
 </dict>
