--- a/ufo/HighlandSans.ufo/glyphs/contents.plist
+++ b/ufo/HighlandSans.ufo/glyphs/contents.plist
@@ -520,6 +520,8 @@
 	<string>icircumflex.glif</string>
 	<key>idieresis</key>
 	<string>idieresis.glif</string>
+	<key>idotaccent</key>
+	<string>idotaccent.glif</string>
 	<key>igrave</key>
 	<string>igrave.glif</string>
 	<key>ij</key>
