--- a/ufo/HighlandSans-Bold.ufo/lib.plist
+++ b/ufo/HighlandSans-Bold.ufo/lib.plist
@@ -345,6 +345,7 @@
 		<string>endash</string>
 		<string>hyphen</string>
 		<string>nonbreakinghyphen</string>
+		<string>softhyphen</string>
 		<string>guillemetleft</string>
 		<string>guillemetright</string>
 		<string>guilsinglleft</string>
