--- a/ufo/Highland Sans Italic.ufo/lib.plist
+++ b/ufo/Highland Sans Italic.ufo/lib.plist
@@ -193,6 +193,7 @@
 		<string>ibreve</string>
 		<string>icircumflex</string>
 		<string>idieresis</string>
+		<string>idotaccent</string>
 		<string>igrave</string>
 		<string>ij</string>
 		<string>imacron</string>
