Update quotes to match lower contrast comma

--- a/ufo/Highland Sans Bold Italic.ufo/lib.plist
+++ b/ufo/Highland Sans Bold Italic.ufo/lib.plist
@@ -7,7 +7,7 @@
 		<key>0791FDB8-5A5D-41D7-9039-1C27D6F382A7</key>
 		<dict>
 			<key>HV</key>
-			<string>72</string>
+			<integer>72</integer>
 		</dict>
 		<key>UUID0</key>
 		<dict>
